fixed pittest and average html issue